--- a/env.yaml
+++ b/env.yaml
@@ -165,7 +165,11 @@ dependencies:
   - pip:
       - absl-py==2.1.0
       - ale-py==0.10.2
+      - annotated-types==0.7.0
       - box2d-py==2.3.5
+      - cachetools==5.5.2
+      - certifi==2025.1.31
+      - charset-normalizer==3.4.1
       - cloudpickle==3.1.1
       - contourpy==1.3.1
       - cycler==0.12.1
@@ -173,8 +177,18 @@ dependencies:
       - filelock==3.17.0
       - fonttools==4.56.0
       - fsspec==2025.3.0
-      - grpcio==1.70.0
+      - google-ai-generativelanguage==0.6.15
+      - google-api-core==2.24.1
+      - google-api-python-client==2.163.0
+      - google-auth==2.38.0
+      - google-auth-httplib2==0.2.0
+      - google-generativeai==0.8.4
+      - googleapis-common-protos==1.69.1
+      - grpcio==1.71.0rc2
+      - grpcio-status==1.71.0rc2
       - gymnasium==1.0.0
+      - httplib2==0.22.0
+      - idna==3.10
       - jinja2==3.1.6
       - joblib==1.4.2
       - kiwisolver==1.4.8
@@ -202,13 +216,20 @@ dependencies:
       - opencv-python==4.11.0.86
       - pandas==2.2.3
       - pillow==11.1.0
-      - protobuf==6.30.0
+      - proto-plus==1.26.0
+      - protobuf==5.29.3
       - psutil==7.0.0
+      - pyasn1==0.6.1
+      - pyasn1-modules==0.4.1
+      - pydantic==2.10.6
+      - pydantic-core==2.27.2
       - pygame==2.6.1
       - pyparsing==3.2.1
       - python-dotenv==1.0.1
       - pytz==2025.1
+      - requests==2.32.3
       - rich==13.9.4
+      - rsa==4.9
       - scikit-learn==1.6.1
       - scipy==1.15.2
       - stable-baselines3==2.5.0
@@ -221,4 +242,6 @@ dependencies:
       - tqdm==4.67.1
       - triton==3.2.0
       - tzdata==2025.1
+      - uritemplate==4.1.1
+      - urllib3==2.3.0
       - werkzeug==3.1.3
