--- a/env.yaml
+++ b/env.yaml
@@ -166,6 +166,7 @@ dependencies:
       - absl-py==2.1.0
       - ale-py==0.10.2
       - annotated-types==0.7.0
+      - anyio==4.8.0
       - box2d-py==2.3.5
       - cachetools==5.5.2
       - certifi==2025.1.31
@@ -182,12 +183,16 @@ dependencies:
       - google-api-python-client==2.163.0
       - google-auth==2.38.0
       - google-auth-httplib2==0.2.0
+      - google-genai==1.5.0
       - google-generativeai==0.8.4
       - googleapis-common-protos==1.69.1
       - grpcio==1.71.0rc2
       - grpcio-status==1.71.0rc2
       - gymnasium==1.0.0
+      - h11==0.14.0
+      - httpcore==1.0.7
       - httplib2==0.22.0
+      - httpx==0.28.1
       - idna==3.10
       - jinja2==3.1.6
       - joblib==1.4.2
@@ -232,6 +237,7 @@ dependencies:
       - rsa==4.9
       - scikit-learn==1.6.1
       - scipy==1.15.2
+      - sniffio==1.3.1
       - stable-baselines3==2.5.0
       - swig==4.3.0
       - sympy==1.13.1
@@ -244,4 +250,5 @@ dependencies:
       - tzdata==2025.1
       - uritemplate==4.1.1
       - urllib3==2.3.0
+      - websockets==14.2
       - werkzeug==3.1.3
