--- a/env.yaml
+++ b/env.yaml
@@ -174,6 +174,7 @@ dependencies:
       - cloudpickle==3.1.1
       - contourpy==1.3.1
       - cycler==0.12.1
+      - distro==1.9.0
       - farama-notifications==0.0.4
       - filelock==3.17.0
       - fonttools==4.56.0
@@ -186,6 +187,7 @@ dependencies:
       - google-genai==1.5.0
       - google-generativeai==0.8.4
       - googleapis-common-protos==1.69.1
+      - groq==0.18.0
       - grpcio==1.71.0rc2
       - grpcio-status==1.71.0rc2
       - gymnasium==1.0.0
